fixed jsx structure and added styles so item content aligns correctly

--- a/src/Components/Item.css
+++ b/src/Components/Item.css
@@ -1,3 +1,7 @@
+.item-details {
+  width: 25%;
+}
+
 .item-name {
   margin-right: 5px;
   letter-spacing: 0.5px;
@@ -14,4 +18,16 @@
   padding: 10px 5px;
   width: 18%;
   font-size: 14px;
+}
+
+.buy-button {
+  background-color: white;
+}
+
+.edit-button {
+  background-color: white;
+}
+
+.delete-button {
+  background-color: white;
 }
